# batch-testing

./: .gitignore  404.html  CNAME  LEGACY_REMOVAL_PLAN.md  README.md  config.ini  generate_tests.py  index.html  mkdocs.yml  package-lock.json  package.json  parser.py  pytest.ini
src/: common_patterns.py  compile_expr.py  compile_file.py  config.ini  coverage.xml  debug_matcher.py  export_to_excel.py  generate_tests.py  lexer.py  package-lock.json  package.json  parser.py  pyproject.toml  regex_config.yml  requirements.txt  run_all.py  run_tests.py  shtest.py  simple_rules.yml  simple_test.py  templates.py  test_file_date.py  test_lifting.py  test_output.sql  test_variable_equals.shtest  test_verify.py  test_yaml_loading.py  validation_ast.py  validation_compiler.py  verify_syntax.py
src/compiler/: ast_compiler.py  atomic_compiler.py  compiler.py  shell_generator.py  shtest_visitor.py  utils.py
src/compiler/matchers/: file_matchers.py  simple_checks.py  stdout_stderr.py
src/compiler/tests/: test_compiler.py
src/parser/: __init__.py  alias_resolver.py  parser.py  shtest_ast.py  shtest_parser.py  shunting_yard.py  test_parser.py
src/shtest_compiler/: ast_nodes.py  ast_to_shell.py  command_loader.py  common_patterns.py  compile_expr.py  compile_file.py  export_to_excel.py  generate_tests.py  regex_config.yml  result_patterns.yml  run_all.py  run_tests.py  setup.py  shtest.py  templates.py  verify_handlers.py  verify_syntax.py
src/shtest_compiler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/shtest_compiler/ast/: shell_framework_ast.py  shell_framework_binder.py  shell_script_ast.py  shellframework_to_shellscript_visitor.py  shtest_to_shellframework_visitor.py  visitor.py
src/shtest_compiler/compiler/: __init__.py  action_utils.py  argument_extractor.py  ast_compiler.py  atomic_compiler.py  command_translator.py  compile_file.py  compiler.py  context.py  matcher_registry.py  shell_framework_builder.py  shell_framework_emitter.py  shell_generator.py  shtest_visitor.py  sql_drivers.py  utils.py  visitors.py
src/shtest_compiler/config/: README.md  aliases.yml  debug_config.py  handler_requirements.yml  patterns_actions.yml  patterns_hybrid.yml  patterns_validations.yml  rule_registry_hybrid.py  validation_mappings.yml
src/shtest_compiler/core/: __init__.py  ast.py  context.py  errors.py  visitor.py
src/shtest_compiler/docs/: shtest_format.md
src/shtest_compiler/parser/: __init__.py  alias_resolver.py  alias_utils.py  ast_builder.py  configurable_parser.py  core.py  grammar.py  lexer.py  parser.old.py  parser.py  rule_registry.py  shtest_ast.old.py  shtest_ast.py  shtest_parser.py  shunting_yard.py
src/shtest_compiler/plugins/: __init__.py  base_ready.py  cat_file.py  compare_files.py  content_displayed.py  copy_dir.py  copy_file.py  create_dir.py  create_file.py  credentials_configured.py  date_modified.py  delete_dir.py  delete_file.py  dir_absent.py  dir_contains_count.py  dir_copied.py  dir_moved.py  dir_ready.py  dir_rights.py  env_defined.py  export_var.py  file_absent.py  file_contains.py  file_contains_exact.py  file_copied.py  file_empty.py  file_exists.py  file_moved.py  file_present.py  file_rights.py  files_identical.py  logs_accessible.py  mkdir.py  move_dir.py  move_file.py  no_error_message.py  purge_dir.py  return_code.py  run_script.py  run_sql_script.py  (+9 more)
src/shtest_compiler/tests/: test_alias_utils.py  test_core.py  test_modular_lexer.py  test_modular_system.py
src/shtest_compiler/utils/: canonicalization.py  logger.py  shell_utils.py
src/testing/: .pre-commit-config.yaml  Makefile  README.md  TEST_SUITE_README.md  TEST_SUITE_SUMMARY.md  __init__.py  pytest.ini  test_suite.ps1  test_suite.py
src/testing/tests/: README.md
src/tests/: alias_action_copy.shtest  alias_action_execution.shtest  alias_action_initialisation.shtest  alias_action_purge.shtest  alias_aucun_message_erreur.shtest  alias_logs_accessibles.shtest  bdd_example.shtest  demo_long_test.shtest  test_case_1.shtest  test_case_2.shtest  test_case_3.shtest  test_case_4.shtest  test_case_5.shtest  test_case_6.shtest  test_case_7.shtest  test_case_8.shtest
src/tests/e2e/: README.md  alias_action_cat.sh  alias_action_cat.txt  alias_action_copy.sh  alias_action_copy.txt  (+72 more)
(+436 files in other folders)
