
[project]
name = "shtest-compiler"
version = "0.1.0"
description = "Compilation d'expressions de test en shell"
authors = [{name = "Auteur", email = "auteur@example.com"}]
dependencies = ["pyyaml"]
requires-python = ">=3.8"

[project.scripts]
compile_expr = "compile_expr:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

compile_file = "compile_file:main"

shtest = "shtest:main"
